# mu

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  setup.cfg
examples/: at.py  eval.py  foo.mu
mu/: __init__.py  element.py  json.py  jsox.py  page.py  pages.py  util.py
py_mu/: __init__.py  json.py  xdm.py  yaml.py
src/mu/: __init__.py
tests/: test_apply.py  test_core.py  test_element.py  test_expand.py  test_hiccup.py  test_jsox.py  test_mu.py  test_nodes.py  test_objects.py  test_page.py  test_pages.py  test_serialize.py
